<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <!-- Display the recipe name -->
    <TextView
        android:id="@+id/widget_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/margin_activity_small"
        android:paddingEnd="@dimen/margin_activity"
        android:paddingLeft="@dimen/margin_activity"
        android:paddingRight="@dimen/margin_activity"
        android:paddingStart="@dimen/margin_activity"
        android:paddingTop="@dimen/margin_activity_small"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        tools:text="@string/tools_recipe_name" />

    <FrameLayout
        android:id="@+id/flWidgetList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Display the ingredient list -->
        <ListView
            android:id="@+id/widget_recipe_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorPrimaryDark"
            android:gravity="center" />

        <!-- When the desired recipe is empty, display an empty state -->
        <RelativeLayout
            android:id="@+id/widget_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/widget_empty_view_text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:contentDescription="@string/widget_empty_view_image"
                android:src="@drawable/icons8_cookies_48" />
        </RelativeLayout>

    </FrameLayout>
</LinearLayout>
