<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activities.RecipeDetailsActivity">

            <!-- Recipe image -->
            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintBottom_toTopOf="@+id/tvIngredientsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Ingredients text label -->
            <TextView
                android:id="@+id/tvIngredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/margin_activity_small"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:contentDescription="@string/ingredients_list_header_title_content_description"
                android:text="@string/ingredients_list_header_title"
                app:layout_constraintBottom_toTopOf="@+id/ingredients_list_fragment" />

            <!-- Ingredients fragment -->
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ingredients_list_fragment"
                android:name="com.bullach.android.bakingapp.ui.fragments.IngredientsListFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tvInstructionsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivRecipeImage" />

            <!-- Instructions text label -->
            <TextView
                android:id="@+id/tvInstructionsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/steps_list_header_title_content_description"
                android:text="@string/steps_list_header_title"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/margin_activity_small"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/steps_list_fragment"
                app:layout_constraintTop_toBottomOf="@id/ingredients_list_fragment" />

            <!-- Steps fragment -->
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/steps_list_fragment"
                android:name="com.bullach.android.bakingapp.ui.fragments.StepsListFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInstructionsTitle" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Empty view is only visible when there are no recipes. -->
                <TextView
                    android:id="@+id/empty_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
